# advanced-2048

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/: KeyboardHandler.h  constants.h  mainwindow.h  settingsdialog.h
src/: KeyboardHandler.cpp  main.cpp  mainwindow.cpp  settingsdialog.cpp  windowsetting.cpp
